# RUSTY_SVG2ICO

./: Cargo.toml  README.md  build.rs  example.txt  icon.rc
src/: main.rs
