[package]
name = "Rusty_SVG2ICO"
version = "0.1.1"
edition = "2021"

[build-dependencies]
embed-resource = "2.4"

[dependencies]
iced = { version = "0.12", features = ["image", "tokio"] }
rfd = "0.14"
svg_to_ico = "0.1"
tempfile = "3"
image = "0.24"
ico = "0.1"
tokio = { version = "1.0", features = ["full"] }
dark-light = "2.0"
